--- a/emply-for-learning/Cargo.toml
+++ b/emply-for-learning/Cargo.toml
@@ -1,8 +1,22 @@
-[package]
-name = "emply-for-learning"
-version = "0.1.0"
-edition = "2021"
+# COPIED FROM (https://blog.logrocket.com/create-backend-api-with-rust-postgres/#project-requirements)
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[package]
+name = "employee"
+version = "0.1.0"
+authors = ["Ola John <ajiboye.olasunkanmi@bcgplatinion.com>"]
+edition = "2018"
 
 [dependencies]
+actix-web = "3.0"
+actix-rt = "1.0"
+chrono = { version = "0.4", features = ["serde"] }
+dotenv = "0.11"
+diesel = { version = "1.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
+diesel_migrations = "1.4"
+env_logger = "0.6"
+lazy_static = "1.4"
+listenfd = "0.3"
+serde = "1.0"
+serde_json = "1.0"
+r2d2 = "0.8"
+uuid = { version = "0.6", features = ["serde", "v4"] }
