chore: update 2 files, copy 1 file and create 1 file Update Cargo.lock and Cargo.toml

--- a/diesel_demo-for-learning/Cargo.toml
+++ b/diesel_demo-for-learning/Cargo.toml
@@ -1,7 +1,6 @@
-workspace = { members = [ "diesel_demo-for-learning","emply-for-learning"] }
 [package]
-name = "council"
-version = "0.0.1"
+name = "diesel_demo-for-learning"
+version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
